unpackaged/main/default/objects/Account/fields/Enquiries_This_Year_NEW__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Year_NEW__c</fullName>
    <label>Enquiries This Year NEW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>