unpackaged/main/default/objects/Account/fields/First_Opportunity_Closed_Won_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Opportunity_Closed_Won_Value__c</fullName>
    <formula>IF(NOT(ISBLANK( First_Opportunity_Closed_Won__c )),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Opportunity Closed Won Value</label>
    <type>Checkbox</type>
</CustomField>