unpackaged/main/default/objects/Account/fields/Forecast_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Annual_Revenue__c</fullName>
    <label>Forecast Annual Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>