unpackaged/main/default/objects/Account/fields/Forecast_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Monthly_Revenue__c</fullName>
    <formula>Forecast_Annual_Revenue__c  / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>