unpackaged/main/default/objects/Account/fields/Forecast_Target_Today__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Target_Today__c</fullName>
    <formula>( Forecast_Annual_Revenue__c  /  Leap_Year__c ) *  (TODAY() - DATE(year(TODAY()),1,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Target Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>