unpackaged/main/default/objects/Account/fields/Forecasted__c.field-meta.xml
<CustomField>
    <fullName>Forecasted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forecasted</label>
    <type>Checkbox</type>
</CustomField>