unpackaged/main/default/objects/Account/fields/Foreign_Time_SLA__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Time_SLA__c</fullName>
    <label>Foreign Time SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>