unpackaged/main/default/objects/Account/fields/Guest_Count__c.field-meta.xml
<CustomField>
    <fullName>Guest_Count__c</fullName>
    <label>Guest Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>