unpackaged/main/default/objects/Account/fields/Has_Become_LIVE__c.field-meta.xml
<CustomField>
    <fullName>Has_Become_LIVE__c</fullName>
    <label>Has Become LIVE!</label>
    <type>DateTime</type>
</CustomField>