unpackaged/main/default/objects/Account/fields/Has_Custom_Instant_Book_Rates__c.field-meta.xml
<CustomField>
    <fullName>Has_Custom_Instant_Book_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Custom Instant Book Rates</label>
    <type>Checkbox</type>
</CustomField>