unpackaged/main/default/objects/Account/fields/Has_Live_Availability__c.field-meta.xml
<CustomField>
    <fullName>Has_Live_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Live Availability?</label>
    <type>Checkbox</type>
</CustomField>