unpackaged/main/default/objects/Account/fields/Has_Live_Booking__c.field-meta.xml
<CustomField>
    <fullName>Has_Live_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Live Booking?</label>
    <type>Checkbox</type>
</CustomField>