unpackaged/main/default/objects/Account/fields/Has_the_Indemnity_Letter__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Indemnity_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has the Indemnity Letter?</label>
    <type>Checkbox</type>
</CustomField>