unpackaged/main/default/objects/Account/fields/Health_Safety_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Health_Safety_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health &amp; Safety Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>