unpackaged/main/default/objects/Account/fields/High_Visibility__c.field-meta.xml
<CustomField>
    <fullName>High_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Visibility</label>
    <type>Checkbox</type>
</CustomField>