unpackaged/main/default/objects/Account/fields/INACTIVE__c.field-meta.xml
<CustomField>
    <fullName>INACTIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INACTIVE</label>
    <type>Checkbox</type>
</CustomField>