unpackaged/main/default/objects/Account/fields/Incorporated_Registered_Country__c.field-meta.xml
<CustomField>
    <fullName>Incorporated_Registered_Country__c</fullName>
    <description>The country where a business is legally registered and incorporated.</description>
    <inlineHelpText>Please enter the country where the company is incorporated. This should match the country on incorporation documents and any official records.</inlineHelpText>
    <label>Incorporated/Registered Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>