unpackaged/main/default/objects/Account/fields/Integration_Account__c.field-meta.xml
<CustomField>
    <fullName>Integration_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Integration Account)</relationshipLabel>
    <relationshipName>IntegrationAccount</relationshipName>
    <type>Lookup</type>
</CustomField>