unpackaged/main/default/objects/Account/fields/Integration_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Account_Type__c</fullName>
    <description>Identifies the type of service or system the company provides.</description>
    <inlineHelpText>Select what service or system the company provides.</inlineHelpText>
    <label>Integration Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Management System</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Central Reservation System</fullName>
            </value>
            <value>
                <fullName>Online Booking Tool (OBT)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>