unpackaged/main/default/objects/Account/fields/Integration_Account_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Integration_Account_Type_Other__c</fullName>
    <label>Integration Account Type - Other</label>
    <type>TextArea</type>
</CustomField>