unpackaged/main/default/objects/Account/fields/Integration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Integration_Fee__c</fullName>
    <label>Integration Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>