unpackaged/main/default/objects/Account/fields/Integration_Priority__c.field-meta.xml
<CustomField>
    <fullName>Integration_Priority__c</fullName>
    <description>Defines the importance or urgency of the integration.</description>
    <inlineHelpText>Select the priority of this integration based on its strategic importance or deadline.</inlineHelpText>
    <label>Integration Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>