unpackaged/main/default/objects/Account/fields/Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Type__c</fullName>
    <inlineHelpText>Select the type on inventory this account has.</inlineHelpText>
    <label>Inventory Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homes</fullName>
            </value>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Aparthotels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>