unpackaged/main/default/objects/Account/fields/Invoices_sent_to__c.field-meta.xml
<CustomField>
    <fullName>Invoices_sent_to__c</fullName>
    <label>Invoices sent to?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance Contact</fullName>
            </value>
            <value>
                <fullName>Booker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>