unpackaged/main/default/objects/Account/fields/Is_There_a_Note_Within_1_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_There_a_Note_Within_1_Month__c</fullName>
    <formula>If(NOW() -  Date_of_Last_Note__c &lt;= 31, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is There a Note Within 1 Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>