unpackaged/main/default/objects/Account/fields/ISAAP_Accredited__c.field-meta.xml
<CustomField>
    <fullName>ISAAP_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISAAP Accredited</label>
    <type>Checkbox</type>
</CustomField>