unpackaged/main/default/objects/Account/fields/Last_Year_Conversions__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Conversions__c</fullName>
    <description>Calculates total conversion percentage for the previous year</description>
    <formula>Bookings_Last_Year_New__c /  Enquiries_Last_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Conversions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>