unpackaged/main/default/objects/Account/fields/Last_Year_SITU_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_SITU_Revenue__c</fullName>
    <label>Last Year SITU Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>