unpackaged/main/default/objects/Account/fields/Leap_Year__c.field-meta.xml
<CustomField>
    <fullName>Leap_Year__c</fullName>
    <formula>IF(OR(
   MOD( Year( Today() ),400)=0,
   AND(
       MOD(Year( Today() ),4)=0,
       MOD(Year( Today() ),100)&lt;&gt;0
       )
     )
,366, 
   IF(OR(
       MOD( Year( Today() )-1,400)=0,
       AND(
           MOD(Year( Today() )-1,4)=0,
           MOD(Year( Today() )-1,100)&lt;&gt;0
           )
         )
   ,366, 365
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leap Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>