unpackaged/main/default/objects/Account/fields/Legacy_status__c.field-meta.xml
<CustomField>
    <fullName>Legacy_status__c</fullName>
    <label>Legacy status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top 15</fullName>
            </value>
            <value>
                <fullName>Top 16-100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>