unpackaged/main/default/objects/Account/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <label>Legal Entity Name</label>
    <type>TextArea</type>
</CustomField>