unpackaged/main/default/objects/Account/fields/Linked_In__c.field-meta.xml
<CustomField>
    <fullName>Linked_In__c</fullName>
    <label>Linked In</label>
    <type>Url</type>
</CustomField>