unpackaged/main/default/objects/Account/fields/LinkedIn_Page__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Page__c</fullName>
    <label>LinkedIn Page</label>
    <type>Url</type>
</CustomField>