unpackaged/main/default/objects/Account/fields/Live_Availability_Process__c.field-meta.xml
<CustomField>
    <fullName>Live_Availability_Process__c</fullName>
    <label>Live Availability Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uncontacted Supplier</fullName>
            </value>
            <value>
                <fullName>No Matching Channel Manager</fullName>
            </value>
            <value>
                <fullName>LIVE In Progress</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Closed Parked</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>