unpackaged/main/default/objects/Account/fields/Live_Integration_Route__c.field-meta.xml
<CustomField>
    <fullName>Live_Integration_Route__c</fullName>
    <description>Indicates the platform that is facilitating the live integration for this partner.</description>
    <inlineHelpText>Tracks the platform used for live integration.</inlineHelpText>
    <label>Live Integration Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Live_Integrations</valueSetName>
    </valueSet>
</CustomField>