unpackaged/main/default/objects/Account/fields/Local_Time_Response_SLA__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_Response_SLA__c</fullName>
    <formula>FLOOR((Local_Time_Response_SLA_End__c  - Local_Time_Response_SLA_Start__c) * 24 *60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Time Response SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>