unpackaged/main/default/objects/Account/fields/Local_Time_Response_SLA_End__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_Response_SLA_End__c</fullName>
    <label>Local Time Response SLA End</label>
    <type>DateTime</type>
</CustomField>