unpackaged/main/default/objects/Account/fields/Local_Time_Response_SLA_Start__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_Response_SLA_Start__c</fullName>
    <label>Local Time Response SLA Start</label>
    <type>DateTime</type>
</CustomField>