unpackaged/main/default/objects/Account/fields/Local_Time_SLA__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_SLA__c</fullName>
    <label>Local Time SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>