unpackaged/main/default/objects/Account/fields/Main_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Email__c</fullName>
    <label>Main Contact Email</label>
    <type>Email</type>
</CustomField>