unpackaged/main/default/objects/Account/fields/Market_Place__c.field-meta.xml
<CustomField>
    <fullName>Market_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketplace</label>
    <type>Checkbox</type>
</CustomField>