unpackaged/main/default/objects/Account/fields/Marketing_Group__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Group__c</fullName>
    <label>Marketing Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>No Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>