unpackaged/main/default/objects/Account/fields/mass_update_trigger__c.field-meta.xml
<CustomField>
    <fullName>mass_update_trigger__c</fullName>
    <label>mass update trigger</label>
    <length>250</length>
    <type>Text</type>
</CustomField>