unpackaged/main/default/objects/Account/fields/Missing_or_Wrong_Information__c.field-meta.xml
<CustomField>
    <fullName>Missing_or_Wrong_Information__c</fullName>
    <formula>IF(OR(  ISBLANK(TEXT(Sales_Channel__c  )),  Forecast_Annual_Revenue__c  = 0, NOW() -  Date_of_Last_Note__c  &gt;= 31), &quot;Missing Information&quot;, &quot;Correct&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing or Wrong Information</label>
    <type>Text</type>
</CustomField>