unpackaged/main/default/objects/Account/fields/Monthly_Fee_Commercial_Structure__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_Commercial_Structure__c</fullName>
    <label>Commercial Structure - Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>