unpackaged/main/default/objects/Account/fields/Negotiated_Commission__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Commission__c</fullName>
    <label>Negotiated Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>