unpackaged/main/default/objects/Account/fields/New_Client_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Date__c</fullName>
    <label>New Client Date</label>
    <type>Date</type>
</CustomField>