unpackaged/main/default/objects/Account/fields/New_Client_Timer__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Timer__c</fullName>
    <formula>TODAY()- New_Client_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>