unpackaged/main/default/objects/Account/fields/Next_Account_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Account_Review_Date__c</fullName>
    <label>Next Account Review Date</label>
    <type>Date</type>
</CustomField>