unpackaged/main/default/objects/Account/fields/Nights_Booked_This_Year_NEW__c.field-meta.xml
<CustomField>
    <fullName>Nights_Booked_This_Year_NEW__c</fullName>
    <label>Nights Booked This Year NEW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>