unpackaged/main/default/objects/Account/fields/Number_of_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Buildings__c</fullName>
    <label>Total Buildings/Properties</label>
    <summaryForeignKey>Supplier_Buildings__c.Partner_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>