unpackaged/main/default/objects/Account/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <label>Number of Units</label>
    <summarizedField>Supplier_Buildings__c.Total_Units__c</summarizedField>
    <summaryForeignKey>Supplier_Buildings__c.Partner_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>