unpackaged/main/default/objects/Account/fields/Number_of_Units_New__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_New__c</fullName>
    <label>Number of Units New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>