unpackaged/main/default/objects/Account/fields/Onboarding_Owner__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks the acquisitions team member responsible for onboarding the partner.</description>
    <inlineHelpText>Select the acquisitions team member who managed the onboarding process for this partner.</inlineHelpText>
    <label>Onboarding Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>