unpackaged/main/default/objects/Account/fields/Operating_Markets__c.field-meta.xml
<CustomField>
    <fullName>Operating_Markets__c</fullName>
    <label>Operating Markets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>