unpackaged/main/default/objects/Account/fields/Operation_Model__c.field-meta.xml
<CustomField>
    <fullName>Operation_Model__c</fullName>
    <description>Defines the model of the partner&#39;s business.</description>
    <inlineHelpText>Select the operational model that best describes how the partner operates their properties</inlineHelpText>
    <label>Operation Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operation_Model</valueSetName>
    </valueSet>
</CustomField>