unpackaged/main/default/objects/Account/fields/Operation_Time__c.field-meta.xml
<CustomField>
    <fullName>Operation_Time__c</fullName>
    <description>Specifies how long in years the partner has been operating.</description>
    <inlineHelpText>Enter how long in years the partner has been operating.</inlineHelpText>
    <label>Operation Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operation_Time</valueSetName>
    </valueSet>
</CustomField>