unpackaged/main/default/objects/Account/fields/OTA_Listing__c.field-meta.xml
<CustomField>
    <fullName>OTA_Listing__c</fullName>
    <description>Links to the online travel agent (OTA) listings the partner has. This is so we can review and monitor guest feedback.</description>
    <inlineHelpText>Enter links to the online travel agent (OTA) listings the partner has.500 character max.</inlineHelpText>
    <label>OTA Listing</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>