unpackaged/main/default/objects/Account/fields/Other_Commercial_Structure__c.field-meta.xml
<CustomField>
    <fullName>Other_Commercial_Structure__c</fullName>
    <label>Commercial Structure - Other</label>
    <type>TextArea</type>
</CustomField>