unpackaged/main/default/objects/Account/fields/Other_Commercial_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Commercial_Terms__c</fullName>
    <description>This field is for detailing any additional commercial terms agreed upon in the contract.</description>
    <inlineHelpText>Enter any other commercial terms agreed with the partner, such as special conditions/unique agreements/explanations of no terms. Maximum 255 characters.</inlineHelpText>
    <label>Other Commercial Terms</label>
    <type>TextArea</type>
</CustomField>