unpackaged/main/default/objects/Account/fields/Other_Time_Response_SLA__c.field-meta.xml
<CustomField>
    <fullName>Other_Time_Response_SLA__c</fullName>
    <formula>FLOOR((Other_Time_Response_SLA_End__c  - Other_Time_Response_SLA_Start__c)*24 *60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Time Response SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>