unpackaged/main/default/objects/Account/fields/Other_Time_Response_SLA_End__c.field-meta.xml
<CustomField>
    <fullName>Other_Time_Response_SLA_End__c</fullName>
    <label>Other Time Response SLA End</label>
    <type>DateTime</type>
</CustomField>