unpackaged/main/default/objects/Account/fields/Other_Time_Response_SLA_Start__c.field-meta.xml
<CustomField>
    <fullName>Other_Time_Response_SLA_Start__c</fullName>
    <label>Other Time Response SLA Start</label>
    <type>DateTime</type>
</CustomField>