unpackaged/main/default/objects/Account/fields/Partner_Accreditations__c.field-meta.xml
<CustomField>
    <fullName>Partner_Accreditations__c</fullName>
    <description>Lists the certifications or accreditations the partner has achieved.</description>
    <inlineHelpText>Select all accreditations the partner has achieved. If &#39;Other&#39; is selected, provide details in the &#39;Other&#39; field.</inlineHelpText>
    <label>Partner Accreditations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greengage</fullName>
            </value>
            <value>
                <fullName>Quality in Tourism</fullName>
            </value>
            <value>
                <fullName>I-PRAC</fullName>
            </value>
            <value>
                <fullName>ISAAP</fullName>
            </value>
            <value>
                <fullName>Ecovadis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>