unpackaged/main/default/objects/Account/fields/Partner_Accreditations_Other__c.field-meta.xml
<CustomField>
    <fullName>Partner_Accreditations_Other__c</fullName>
    <description>Captures additional accreditations not included in the predefined list.</description>
    <inlineHelpText>Enter details of any other accreditations the partner has achieved that are not included in the predefined options.</inlineHelpText>
    <label>Partner Accreditations (Other)</label>
    <type>TextArea</type>
</CustomField>