unpackaged/main/default/objects/Account/fields/Partner_Associations_Membership_Other__c.field-meta.xml
<CustomField>
    <fullName>Partner_Associations_Membership_Other__c</fullName>
    <description>Captures additional association memberships not included in the predefined list.</description>
    <inlineHelpText>Enter details of any other associations the partner is affiliated with that are not included in the predefined options.</inlineHelpText>
    <label>Partner Associations Membership (Other)</label>
    <type>TextArea</type>
</CustomField>