unpackaged/main/default/objects/Account/fields/Partner_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payment_Terms__c</fullName>
    <label>Partner Payment Terms</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>