unpackaged/main/default/objects/Account/fields/Payment_Product__c.field-meta.xml
<CustomField>
    <fullName>Payment_Product__c</fullName>
    <label>Payment Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adgen</fullName>
            </value>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>AsiaPay</fullName>
            </value>
            <value>
                <fullName>Braintree</fullName>
            </value>
            <value>
                <fullName>DOKU</fullName>
            </value>
            <value>
                <fullName>GoCardless</fullName>
            </value>
            <value>
                <fullName>Inhouse</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>PayStack</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>